
NEWS file for VIFF
==================

This file summarizes the changes between each release. Many more
details can be found in the commit messages:

  http://hg.viff.dk/viff/log/


Version 0.3, released on 2007-12-27
-----------------------------------

Secure communication between the players were implemented using TLS.
An included Makefile can generate the needed certificates. The network
layer was completely reimplemented, this breaks compatibility with
programs written for VIFF version 0.2 or earlier.


Version 0.2, released on 2007-11-14
-----------------------------------

Implemented overloaded arithmetic operators, so 'w = x + y * z' now
adds and multiplies the three shares as expected. Updated API
documentation. Released using a Distutils setup.py script.


Version 0.1.1, released on 2007-10-23
-------------------------------------

Added API documentation and updated the installation instructions.


Version 0.1, released on 2007-10-16
-----------------------------------

First public release.

Implements basic functionality including addition, multiplication,
exclusive-or, and comparison of shares. Shares can be made using
Shamir sharing or PRSS.

Includes a suite of unit tests and example programs.